yamls/kube_demo_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-demo-svc
  labels:
    app: kube-demo
    service: kube-demo
spec:
  ports:
  - port: 1999
    targetPort: 1999
    name: http
  selector:
    app: kube-demo
  type: NodePort  
---
